# g5-project

./: .gitignore  CMakeLists.txt  README.md  cmake_vs.ps1  cmake_vs.sh  imgui.ini  run_test.sh  test.txt
config/: cmake_vs.sh  cmake_vs.sh.in  root_dir.h.in
includes/glad/: glad.h
libs/: glfw3.lib
media/shader/: ambient.fs  ambient.vs  lambert.fs  lambert.vs  phong.fs  phong.vs  shaderutil.fs
media/shader/test/: print.cpp  tri.fs  tri.vs
src/: CMakeLists.txt
src/camapp/: CMakeLists.txt  camapp.cpp  camapp.h  cameras.cpp  cameras.h  util.cpp  util.h
src/common/: CMakeLists.txt  application.cpp  application.h  camera.h  fullscreen_quad.h  input.h  skybox.cpp  texture.h  texture2d.cpp  texture_cubemap.cpp  transform.cpp  transform.h  vertex.h
src/filesys/: CMakeLists.txt  filesystem.h  filesystst.cpp
src/libs/: CMakeLists.txt  glad.c
src/libs/imgui/: CMakeLists.txt
src/libs/stb/: CMakeLists.txt
src/main/: CMakeLists.txt  callbacks.cpp  callbacks.h  callbakcs.cpp  main.cpp  mainapp.cpp  mainapp.h
src/model/: CMakeLists.txt  model.cpp  model.h
src/objloader/: CMakeLists.txt  cube.cpp  cube.h  objloader.cpp  objloader.h  runtri.cpp  triapp.cpp  triapp.h
src/shading/: CMakeLists.txt  lights.h  material.h  shadingapp.cpp  shadingapp.h
src/test/: CMakeLists.txt  test.cpp
src/test/app/: CMakeLists.txt  runtri.cpp  triapp.cpp  triapp.h
src/texapp/: CMakeLists.txt  texapp.cpp  texapp.h
src/xmttest/: CMakeLists.txt  xmttest.cpp
src/xmttest/app/: CMakeLists.txt  triapp.cpp  triapp.h
